<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panjang"
        android:textSize="16sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etPanjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_panjang"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:textColorHint="#757575"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lebar"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etLebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_lebar"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:textColorHint="#757575"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnLuas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luas"
            android:layout_weight="3"
            android:layout_marginStart="3dp"/>

        <Button
            android:id="@+id/btnKeliling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keliling"
            android:layout_weight="3"
            android:layout_marginStart="3dp"/>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_weight="3"
            android:layout_marginStart="3dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>